Improved docker setup
- Moved src/database/create.sql -> docker/create.sql
- Dockerfile now uses mysqlSetup.sh to initialize database with:
  - default login info
  - default database
  - default tables from create.sql
- Updated ER to reflect current schema.
- Added a simple test to index.php to display tables from database.
- Fixed a bug in config_example.php => update your config.php files!
- Found that sadly 2048 char URNs are too long to have them as PRIMARY KEYs.
  Thus I added Ids to have a usual setup for MySQL,
  while the URNs will still be used by us.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,9 @@ LABEL Description="Dockerfile for https://github.com/runjak/TranscriptionDesk" V
 RUN apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql
 RUN apt-get install -y mysql-server
 RUN rm /var/www/html/index.html
+COPY create.sql /root/
+COPY mysqlSetup.sh /root/
+RUN /root/mysqlSetup.sh
 EXPOSE 80
 COPY entrypoint.sh /
 ENTRYPOINT ["bash","-c","/entrypoint.sh"]
