--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "hashicorp/trusty64"
+  config.vm.box = "ubuntu/trusty64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -72,5 +72,6 @@ Vagrant.configure(2) do |config|
      rm /var/www/html/index.html
      service apache2 mysql start
      service mysql start
+     /containerSetup/mysqlSetup.sh /containerSetup/create.sql
    SHELL
 end
