--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -67,7 +67,7 @@ Vagrant.configure(2) do |config|
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
      sudo apt-get update
-     sudo apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql
+     sudo apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-json
      rm /var/www/html/index.html
      service apache2 start
      sudo bash /containerSetup/mysqlSetup.sh /containerSetup/create.sql
