--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "ubuntu/trusty64"
+  # Fetch box from https://atlas.hashicorp.com/ubuntu/boxes/ubuntu-15.04-snappy-core-stable
+  config.vm.box = "ubuntu/ubuntu-15.04-snappy-core-stable"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -66,10 +67,11 @@ Vagrant.configure(2) do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
-     sudo apt-get update
-     sudo apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-json
+     apt-get update
+     ap-get dist-upgrade
+     apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-json
      rm /var/www/html/index.html
+     /containerSetup/mysqlSetup.sh /containerSetup/create.sql
      service apache2 start
-     sudo bash /containerSetup/mysqlSetup.sh /containerSetup/create.sql
    SHELL
 end
