Got the Vagrant setup working
- Now we need to see how it works on Ollis machine.
- The Makefile can now be used to setup both vagrant and docker.
- I've abandoned work to use docker as a provider for vagrant,
  as this setup appears to be working ok now.
- I still need to fix create.sql to use good keys, and adjust the ER diagram.

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -3,12 +3,10 @@
 FROM ubuntu:latest
 MAINTAINER Jakob Runge <mam09crm@studserv.uni-leipzig.de>
 LABEL Description="Dockerfile for https://github.com/runjak/TranscriptionDesk" Version="0.0.1"
-RUN apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql
-RUN apt-get install -y mysql-server
-RUN rm /var/www/html/index.html
+COPY install.sh /root/
 COPY create.sql /root/
-COPY mysqlSetup.sh /root/
-RUN /root/mysqlSetup.sh
+RUN /root/install.sh /root/create.sql
+RUN rm /var/www/html/index.html
 EXPOSE 80
 COPY entrypoint.sh /
 ENTRYPOINT ["bash","-c","/entrypoint.sh"]
