--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -12,8 +12,8 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  # Fetch box from https://atlas.hashicorp.com/ubuntu/boxes/ubuntu-15.04-snappy-core-stable
-  config.vm.box = "ubuntu/ubuntu-15.04-snappy-core-stable"
+  # Fetch box from https://atlas.hashicorp.com/ubuntu/boxes/vivid64
+  config.vm.box = "ubuntu/vivid64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -67,11 +67,9 @@ Vagrant.configure(2) do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
-     apt-get update
-     ap-get dist-upgrade
-     apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-json
-     rm /var/www/html/index.html
-     /containerSetup/mysqlSetup.sh /containerSetup/create.sql
-     service apache2 start
+     sudo rm /var/www/html/index.html
+     sudo /containerSetup/install.sh /containerSetup/create.sql
+     sudo service apache2 start
+     sudo service mysql start
    SHELL
 end
