--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -71,5 +71,6 @@ Vagrant.configure(2) do |config|
      sudo /containerSetup/install.sh /containerSetup/create.sql
      sudo service apache2 start
      sudo service mysql start
+     sudo systemctl restart apache2
    SHELL
 end
