Improved Vagrant setup
- Removed Docker setup, since it grew harder to support it :(
- Added src/auth/_htaccess, be sure to copy it to .htaccess
  - If you can't use Vagrant, you might need to adjust the RewriteBase!
- Added logs directory. If Vagrant is used, the apache2 logs will appear here.

--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -40,6 +40,7 @@ Vagrant.configure(2) do |config|
   # argument is a set of non-required options.
   config.vm.synced_folder "../src", "/var/www/html"
   config.vm.synced_folder ".", "/containerSetup"
+  config.vm.synced_folder "../logs", "/var/log/apache2"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -67,10 +68,19 @@ Vagrant.configure(2) do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
-     sudo rm /var/www/html/index.html
-     sudo /containerSetup/install.sh /containerSetup/create.sql
-     sudo service apache2 start
-     sudo service mysql start
-     sudo systemctl restart apache2
+     apt-get update
+     apt-get dist-upgrade
+     echo "Installing mysql-server:";
+     debconf-set-selections <<< 'mysql-server mysql-server/root_password password 1234'
+     debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password 1234'
+     apt-get install -y mysql-server
+     service mysql start
+     echo "Creating database: TranscriptionDesk"
+     echo "CREATE DATABASE TranscriptionDesk CHARACTER SET utf8;"|mysql -uroot -p1234
+     mysql -uroot -p1234 TranscriptionDesk < /containerSetup/create.sql
+     apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-curl
+     a2enmod rewrite
+     echo -e "<Directory \"/var/www/html\">\nAllowOverride All\n</Directory>" >> /etc/apache2/sites-enabled/000-default.conf
+     service apache2 restart
    SHELL
 end
