--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -70,7 +70,7 @@ Vagrant.configure(2) do |config|
    config.vm.provision "shell", inline: <<-SHELL
      apt-get update
      apt-get dist-upgrade
-     echo "Installing mysql-server:";
+     echo "Installing mysql-server:"
      debconf-set-selections <<< 'mysql-server mysql-server/root_password password 1234'
      debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password 1234'
      apt-get install -y mysql-server
@@ -82,5 +82,10 @@ Vagrant.configure(2) do |config|
      a2enmod rewrite
      echo -e "<Directory \"/var/www/html\">\nAllowOverride All\n</Directory>" >> /etc/apache2/sites-enabled/000-default.conf
      service apache2 restart
+     echo "Installing omeka.service, omeka.timer:"
+     cp /containerSetup/omeka.{service,timer} /etc/systemd/system
+     systemctl enable omeka.timer
+     systemctl start omeka.timer
+     systemctl start omeka.service
    SHELL
 end
