--- a/projektbericht/.gitignore
+++ b/projektbericht/.gitignore
@@ -1,9 +1,11 @@
-main.aux
-main.bbl
-main.blg
-main.dvi
-main.fdb_latexmk
-main.fls
-main.log
-main.pdf
-main.toc
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fls
+*.log
+*.pdf
+*.run.xml
+*.toc
