--- a/container/Vagrantfile
+++ b/container/Vagrantfile
@@ -46,13 +46,14 @@ Vagrant.configure(2) do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+    config.vm.provider "virtualbox" do |vb|
+      # Setting custom name for machine:
+      vb.name = "TranscriptionDesk"
+      # Display the VirtualBox GUI when booting the machine
+      #vb.gui = true
+      # Customize the amount of memory on the VM:
+      #vb.memory = "1024"
+    end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -73,12 +74,12 @@ Vagrant.configure(2) do |config|
      echo "Installing mysql-server:"
      debconf-set-selections <<< 'mysql-server mysql-server/root_password password 1234'
      debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password 1234'
-     apt-get install -y mysql-server
+     apt-get install -y --force-yes mysql-server
      service mysql start
      echo "Creating database: TranscriptionDesk"
      echo "CREATE DATABASE TranscriptionDesk CHARACTER SET utf8;"|mysql -uroot -p1234
      mysql -uroot -p1234 TranscriptionDesk < /containerSetup/create.sql
-     apt-get install -y apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-curl
+     apt-get install -y --force-yes apache2-mpm-prefork libapache2-mod-php5 php5 php5-mysql php5-curl
      a2enmod rewrite
      echo -e "<Directory \"/var/www/html\">\nAllowOverride All\n</Directory>" >> /etc/apache2/sites-enabled/000-default.conf
      service apache2 restart
